--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,13 @@
-* {
-    box-sizing: border-box;
-  }
-  .header {
-   
+.header {
     max-width: 1052px;
     background-color: #fff;
     display: grid;
     grid-template-columns: 1fr 148px 1fr;
     grid-auto-flow: column;
     align-items: center;
-    position: relative;
+    justify-items: center;
     margin: 92px 24px 96px;
-  }
+}
 
 .header__links-list {
     display: grid;
@@ -21,32 +17,35 @@
     gap: 24.4px;
     grid-column: 1/2;
     width: 391.48px;
-    height: 22px;
     font-size: 18px;
     font-weight: 400;
     line-height: 21.13px;
     margin: 44px 36px 39px 26.52px;
-  }
+}
+
 .header__links-list-item_no-bullit {
     list-style-type: none;
 }
+
 .header__links-list-item {
     text-decoration: underline;
     text-underline-offset: 0.2em;
 }
+
 .header__logo {
     margin-right: 450px;
     margin-left: 454px;
     display: grid;
-    position: absolute;
     align-self: center;
     width: 148px;
 }
+
 .header__logo-image {
     margin: 1.16px 9.86px 0.81px 9.03px;
     width: 129.11px;
-    min-height: 104.65px;
+    max-height: 104.65px;
 }
+
 .header__address {
     display: grid;
     grid-column: 3/4;
@@ -54,71 +53,77 @@
     height: 98px;
     margin: 5px 25.48px 2px 184px;
 }
+
 .address {
     font-size: 18px;
     font-weight: 400;
     line-height: 24.13px;
     font-style: normal;
 }
+
 .cover {
     display:grid;
     background-image: url(../images/cover.jpg);
     width: 1100px;
-    height: 757px;
+    max-height: 757px;
     background-position: center;
     background-size: cover;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
+
 .overlay {
     background-color: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 0;
+    inset: 0;
+    z-index: 1;
 }
+
 .cover__title {
-    margin: 165px 50px 237px;
+    margin: 165px 50px 0;
     width: 1000px;
-    height: 355px;
     color: #fff;
     font-size: 100px;
     line-height: 115px;
     font-weight: 700;
-    z-index: 1;
+    z-index: 2;
 }
-.cover__title_aligned-text {
+
+.aligned-text {
     display: block;
     letter-spacing: 25px;
     text-align: left;
-    text-wrap: nowrap;
 }
-.cover__title_aligned-text_letter-spacing-extended {
+
+.aligned-text_letter-spacing-extended {
     letter-spacing: 65px;
 }
-.cover__title_aligned-text_center {
+
+.aligned-text_center {
     display: block;
     padding-top: 13.9px;
     letter-spacing: 28.5px;
     text-align: center;
-    text-wrap: nowrap;
 }
 
-.cover__title_aligned-text_right {
+.aligned-text_right {
     display: block;
     letter-spacing: 30px;
     text-align: right;
-    text-wrap: nowrap;
 }
-.cover__title_aligned-text_right_no-letter-spacing {
+
+.aligned-text_right_no-letter-spacing {
     letter-spacing: 0px;
 }
+
 .cover__description {
     display: flex;
-    position: absolute;
-    margin: 655px 0 51px 0;
-    z-index: 1;
+    margin: 135px 0 51px 0;
+    z-index: 2;
 }
+
 .cover__description-text {
     display: inline;
     text-transform: uppercase;
@@ -130,11 +135,13 @@
     white-space: nowrap;
     color: #fff;
 }
+
 button {
     display: inline;
     width: 256px;
-    height: 51px;
+    min-height: 51px;
     margin: 0 50px 0 0;
+    font-family: 'Raleway', 'Arial', sans-serif;
     font-size: 22px;
     font-weight: 500;
     color: #fff;
@@ -144,16 +151,18 @@ button {
     text-align: center;
     border: 1px solid #fff;
 }
+
 .lots {
     margin: 179px 24px 146px;
 }
+
 .card {
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    max-width: 1052px;
+    max-width: 1052px;     
 }
+
 .lots__heading {
     display: block;
     margin: 0px 891px 27px 40px;
@@ -162,65 +171,70 @@ button {
     font-weight: 700;
     line-height: 46.96px;
 }
+
 .lots__card-list {
     display: flex;
     gap: 25px;
+    flex-wrap: wrap;
 }
+
 .lots__card-list-item {
     display: flex;
     flex-grow: 1;
     width: 334px;
-    height: 563px;
+    max-height: 563px;
     list-style-type: none;
     flex-direction: column;
-    justify-content: space-between;
-    }
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: 0;
+}
+
 .lots__card-list-item.card_type_film {
     background-image: url(../images/card-lot-01.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    z-index: -1;
 }
+
 .lots__card-list-item.card_type_book {
     background-image: url(../images/card-lot-02.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    z-index: -1;
 }
+
 .lots__card-list-item.card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    z-index: -1;
 }
+
 .card-link {
     display: flex;
-    width: 254px;
-    height: 82px;
-    margin: 51px 40px auto;
+    min-width: 254px;
+    margin: 51px 40px 0 40px;
     color: #fff;
+    text-decoration: none;
+    text-transform: none;
+    z-index: 2;
+    flex-grow: 2;
+}
+
+h3 {
+    display: flex;
     font-size: 22px;
     font-weight: 700;
     line-height: 26.4px;
     text-transform: uppercase;
-    position: relative;
-    z-index: 1;
+    text-decoration: underline;
+    z-index: 2;
 }
 
 .card__text {
     display: flex;
     width: 254px;
-    margin: auto 40px 48px;
-    color: #fff;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
-    position: relative;
-    z-index: 1;
+    z-index: 2;
+    margin-top: auto;
+    margin-bottom: 48px;
 }
+
 .lots__look-more-link {
     display: flex;
     font-weight: 400;
@@ -229,30 +243,33 @@ button {
     color: #000;
     margin: 30px 820px 0px 40px;
 }
+
 .about {
     display: grid;
     column-gap: 20px;
     width: 1052px;
-    height: 595px;
     margin: 146px 24px 0;
 }
+
 .about__column {
     display: grid;
     grid-template-columns: 334px 1fr;
     grid-auto-flow: column;
     position: relative;
 }
+
 .about__logo {
     margin: 0 auto;
     height: 240px;
     width: 240px;
     align-content: start;
 }
+
 .about__logo-image_circle {
     display: grid;
     grid-row: 1/2;
     grid-column: 1/2;
-    z-index: 0;
+    z-index: 1;
     background-color: #000;
     border-radius: 50%;
     height: 240px;
@@ -260,19 +277,20 @@ button {
     place-content: center;
     margin: 35px 0 0 47px;
 }
+
 .about__logo-image {
     display: grid;
     grid-row: 1/2;
     grid-column: 1/2;
-    z-index: 1;
+    z-index: 2;
     height: 114px;
     width: 148px;
     place-content: center;
 }
+
 .about__title {
     display: grid;
     width: 291px;
-    height: 47px;
     margin: 139px 402px 100px 0;
     justify-self: start;
     grid-row: 1/2;
@@ -282,58 +300,63 @@ button {
     font-weight: 700;
     line-height: 46.96px;
 }
+
 .about__text {
     display: grid;
     width: 693px;
-    height: 312px;
     grid-row: 2/3;
     grid-column: 2/3;
+    margin-left: 0;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
 }
+
 p {
     margin-bottom: 1em;
 }
+
 .footer {
     max-width: 1000px;
     background-color: #fff;
     display: grid;
     grid-auto-flow: column;
-    position: relative;
     margin: 180px 50px 88px;
-  }
-  .footer__menu {
+}
+
+.footer__menu {
     display: grid;
     width: 149px;
-    height: 64px;
     margin: 1px 185px 33px 185.48px;
-  }
-  .footer__menu-list {
+}
+
+.footer__menu-list {
     list-style-type: none;
     text-align: center;
     font-size: 18px;
     font-weight: 400;
     line-height: 21.13px;
-  }
-  .footer__menu-link {
+}
+
+.footer__menu-link {
     text-decoration: none;
-  }
+}
 .footer__menu-link_active {
     text-decoration: underline;
     text-underline-offset: 0.2em;
-  }
-  .footer__social-list {
+}
+
+.footer__social-list {
     list-style-type: none;
     display: grid;
     width: 240px;
-    height: 48px;
     grid-auto-flow: column;
     justify-content: space-between;
     margin: 1px 0 16px;
-  }
-  .footer__social-icon {
+}
+
+.footer__social-icon {
     width: 48px;
     height: 48px;
     align-items: start;
-  }
+}
