--- a/styles/style.css
+++ b/styles/style.css
@@ -33,8 +33,6 @@
 }
 
 .header__logo {
-    margin-right: 450px;
-    margin-left: 454px;
     display: grid;
     align-self: center;
     width: 148px;
@@ -50,7 +48,6 @@
     display: grid;
     grid-column: 3/4;
     width: 240.52px;
-    height: 98px;
     margin: 5px 25.48px 2px 184px;
 }
 
@@ -62,10 +59,10 @@
 }
 
 .cover {
-    display:grid;
+    display: grid;
     background-image: url(../images/cover.jpg);
     width: 1100px;
-    max-height: 757px;
+    min-height: 757px;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -93,23 +90,24 @@
 
 .aligned-text {
     display: block;
-    letter-spacing: 25px;
+    letter-spacing: 30px;
     text-align: left;
 }
 
 .aligned-text_letter-spacing-extended {
-    letter-spacing: 65px;
+    letter-spacing: 62px;
 }
 
 .aligned-text_center {
     display: block;
-    padding-top: 13.9px;
+    padding-top: 13px;
     letter-spacing: 28.5px;
     text-align: center;
 }
 
 .aligned-text_right {
     display: block;
+    padding-top: 5px;
     letter-spacing: 30px;
     text-align: right;
 }
@@ -120,7 +118,7 @@
 
 .cover__description {
     display: flex;
-    margin: 135px 0 51px 0;
+    margin: 128px 50px 51px 0;
     z-index: 2;
 }
 
@@ -128,7 +126,7 @@
     display: inline;
     text-transform: uppercase;
     padding: 12px 79px 11px 78px;
-    word-spacing: 20px;
+    word-spacing: 18px;
     font-size: 22px;
     font-weight: 400;
     line-height: 28px;
@@ -140,8 +138,7 @@ button {
     display: inline;
     width: 256px;
     min-height: 51px;
-    margin: 0 50px 0 0;
-    font-family: 'Raleway', 'Arial', sans-serif;
+    font-family: "Raleway", "Arial", sans-serif;
     font-size: 22px;
     font-weight: 500;
     color: #fff;
@@ -149,18 +146,12 @@ button {
     background-color: transparent;
     text-transform: uppercase;
     text-align: center;
+    white-space: nowrap;
     border: 1px solid #fff;
 }
 
 .lots {
     margin: 179px 24px 146px;
-}
-
-.card {
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1052px;     
 }
 
 .lots__heading {
@@ -181,32 +172,38 @@ button {
 .lots__card-list-item {
     display: flex;
     flex-grow: 1;
-    width: 334px;
-    max-height: 563px;
     list-style-type: none;
     flex-direction: column;
+    z-index: 0;
+}
+
+.card {
+    display: flex;
+    flex-wrap: wrap;
+    width: 334px;
+    min-height: 563px;
+    max-width: 1052px;
     background-position: center;
     background-size: cover;
     position: relative;
     z-index: 0;
 }
 
-.lots__card-list-item.card_type_film {
+.card_type_film {
     background-image: url(../images/card-lot-01.jpg);
 }
 
-.lots__card-list-item.card_type_book {
+.card_type_book {
     background-image: url(../images/card-lot-02.jpg);
 }
 
-.lots__card-list-item.card_type_picture {
+.card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
 }
 
 .card-link {
     display: flex;
     min-width: 254px;
-    margin: 51px 40px 0 40px;
     color: #fff;
     text-decoration: none;
     text-transform: none;
@@ -222,6 +219,7 @@ h3 {
     text-transform: uppercase;
     text-decoration: underline;
     z-index: 2;
+    margin: 51px 40px auto;
 }
 
 .card__text {
@@ -231,8 +229,7 @@ h3 {
     font-weight: 400;
     line-height: 24px;
     z-index: 2;
-    margin-top: auto;
-    margin-bottom: 48px;
+    margin: auto 40px 48px;
 }
 
 .lots__look-more-link {
@@ -290,8 +287,8 @@ h3 {
 
 .about__title {
     display: grid;
-    width: 291px;
-    margin: 139px 402px 100px 0;
+    min-width: 291px;
+    margin: 136px 402px 100px 0;
     justify-self: start;
     grid-row: 1/2;
     grid-column: 2/3;
@@ -303,7 +300,8 @@ h3 {
 
 .about__text {
     display: grid;
-    width: 693px;
+    row-gap: 24px;
+    max-width: 693px;
     grid-row: 2/3;
     grid-column: 2/3;
     margin-left: 0;
@@ -313,7 +311,7 @@ h3 {
 }
 
 p {
-    margin-bottom: 1em;
+    display: grid;
 }
 
 .footer {
