--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
     grid-auto-flow: column;
     align-items: center;
     justify-items: center;
-    margin: 92px 24px 96px;
+    margin: 92px 24px 94px;
 }
 
 .header__links-list {
@@ -24,12 +24,17 @@
 }
 
 .header__links-list-item_no-bullit {
-    list-style-type: none;
+    list-style-type: none;    
+}
+
+.header__link {
+    text-decoration: none;
 }
 
 .header__links-list-item {
     text-decoration: underline;
     text-underline-offset: 0.2em;
+    letter-spacing: 0.3px;
 }
 
 .header__logo {
@@ -39,9 +44,9 @@
 }
 
 .header__logo-image {
-    margin: 1.16px 9.86px 0.81px 9.03px;
-    width: 129.11px;
+    width: 135px;
     max-height: 104.65px;
+    margin-left: 5px;
 }
 
 .header__address {
@@ -107,7 +112,7 @@
 
 .aligned-text_right {
     display: block;
-    padding-top: 5px;
+    padding-top: 3px;
     letter-spacing: 30px;
     text-align: right;
 }
@@ -237,6 +242,8 @@ h3 {
     font-weight: 400;
     font-size: 20px;
     line-height: 23.48px;
+    text-decoration: underline;
+    text-underline-offset: 0.2em;
     color: #000;
     margin: 30px 820px 0px 40px;
 }
@@ -288,7 +295,7 @@ h3 {
 .about__title {
     display: grid;
     min-width: 291px;
-    margin: 136px 402px 100px 0;
+    margin: 136px 402px 98px 0;
     justify-self: start;
     grid-row: 1/2;
     grid-column: 2/3;
